fixed the buttons in the main screen on mobile 1.2

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 960px) {
     /* h1{
         letter-spacing: normal !important;
         font-size: 1px;
@@ -35,12 +35,8 @@
         padding: 5px;
         border: 5px solid transparent;
         letter-spacing: 5px;
-        font-size: 40px;
     }
     
-    p {
-        font-size: 16px;
-    }
     
     button span {
         font-size: 14px;
@@ -80,8 +76,8 @@
         align-items: center;
     }
     
-    .result {
-        border: 5px solid #313131;
+    .resultBoard .result {
+        border: 6px solid #313131;
         padding: 12px;
         border-radius: 5px;
         font-size: 14px;
